--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
     name: Test Generator
     runs-on: ubuntu-24.04
     container:
-      image: crystallang/crystal:1.17
+      image: crystallang/crystal:1.18.2
     steps:
       - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
       - name: Run generator tests
@@ -22,7 +22,7 @@ jobs:
     name: Check Generator Templates
     runs-on: ubuntu-24.04
     container:
-      image: crystallang/crystal:1.17
+      image: crystallang/crystal:1.18.2
     steps:
       - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
       - name: Check generator templates tests
@@ -31,7 +31,7 @@ jobs:
     name: Check file formatting
     runs-on: ubuntu-24.04
     container:
-      image: crystallang/crystal:1.17
+      image: crystallang/crystal:1.18.2
     steps:
       - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
       - name: Run file formatting
@@ -42,7 +42,7 @@ jobs:
     strategy:
       # Allows running the job multiple times with different configurations
       matrix:
-        crystal: ["1.11", "1.12", "1.13", "1.14", "1.15.1"]
+        crystal: ["1.15", "1.16", "1.17", "1.18.2"]
     container:
       image: crystallang/crystal:${{ matrix.crystal }}
     steps:
@@ -58,7 +58,7 @@ jobs:
       - name: Install Crystal
         uses: crystal-lang/install-crystal@56684e85b94c6340f5035965d57dcfdedd1ab0de
         with:
-          crystal: "1.15.1"
+          crystal: "1.18.2"
       - name: 'Setup jq'
         run: choco install jq
       - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
