Add Camicia exercise with game simulation and rules
- Introduced the Camicia exercise to simulate the card game.
- Added game rules and instructions in `instructions.md`.
- Implemented game logic in `src/camicia.cr`.
- Created tests for various game scenarios in `spec/camicia_spec.cr`.
- Updated metadata and configuration files for the new exercise.

--- a/config.json
+++ b/config.json
@@ -1048,6 +1048,14 @@
         "difficulty": 3
       },
       {
+        "slug": "camicia",
+        "name": "Camicia",
+        "uuid": "9980f921-375e-4d1b-aa34-61064f11ca16",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 4
+      }
+      {
         "slug": "robot-simulator",
         "name": "Robot Simulator",
         "uuid": "1fd5c0db-dbfd-4956-bcb8-d874bff26258",
